--- a/style/style.css
+++ b/style/style.css
@@ -126,7 +126,7 @@ body{
     font-weight: bold;
     font-size: 16px;
     float: right;
-    margin-top: 30px;
+    margin-top: 10px;
     padding-right: 130px;
    
 }
@@ -136,6 +136,39 @@ body{
 /* .........................................
      propular-product section style end
 .............................................*/
+
+
 /* ..........................................
          footer section style start
 ............................................. */
+footer{
+    width: 1440px;
+    height: 210px;
+    background: #0A0826;
+    margin-top: 50px;
+    line-height: 5px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+}
+footer h3{
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 5px;
+}
+footer h6{
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 0.5px;
+   
+}
+.footer-icon{
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 5px;
+}
