--- a/style/style.css
+++ b/style/style.css
@@ -6,17 +6,15 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+.container{
+    padding-left: 124px;
+    padding-right: 256px;
+    padding-bottom: 50px;
+    margin: 5px;
 
-/* .navigation{
-    Width: 243px;
-    Height: 52.2px;
-    position: absolute;
-    left: 8.33%;
-    right: 74.79%;
-    top: 2.63%;
-    bottom: 95.79%;
-    font-weight: bold;
-    font-size: 24px;
+}
+/* .navigation p{
+    
     
 } */
 
@@ -62,11 +60,6 @@ body{
 /* .........................................
      propular-product section style start
 .............................................*/
-.Popular-Collection{
-    padding-left: 124px;
-    padding-right: 256px;
-
-}
 .propular-product {
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -90,7 +83,7 @@ body{
     font-weight: 600;
     font-size: 28px;
     padding-top:50px ;
-    padding-bottom: 47px;
+    padding-bottom: 30px;
 }
 .product img{
     width: 300px;
@@ -125,10 +118,8 @@ body{
     color: #E02C6D;
     font-weight: bold;
     font-size: 16px;
-    float: right;
+    float:right;
     margin-top: 10px;
-    padding-right: 130px;
-   
 }
 .ankor-icon{
     padding-left: 20px;
@@ -136,7 +127,45 @@ body{
 /* .........................................
      propular-product section style end
 .............................................*/
-
+ /* ...........................................
+ How to Become an Influencer section style start
+ ...............................................*/
+.Become-an-Influencer{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    
+}
+.Influencer-stape{
+    padding-right: 20px;
+}
+.Influencer-stape-image img{
+    width: 404px;
+    height: 270px;
+    border-radius: 10px;
+    margin-top: 20px;
+ 
+}
+.Influencer-stape h1{
+    font-size: 38px;
+    
+}
+.Influencer-stape p{
+    font-size: 16px;
+    text-align: justify;
+}
+.Influencer-stape a{
+    text-decoration: none;
+    background-color: #E02C6D;
+    color: #FFFFFF;
+    padding: 10px; 
+}
+#stape-icon{
+    padding-left: 20px;
+}
+ /* ...........................................
+ How to Become an Influencer section style start
+ ...............................................*/
 
 /* ..........................................
          footer section style start
@@ -171,4 +200,24 @@ footer h6{
     text-align: center;
     font-size: 20px;
     letter-spacing: 5px;
+}
+@media  only screen and (max-width:688px) {
+   
+    .Influencer{
+        flex-direction: column;
+        justify-content: center;  
+        
+    }
+    .propular-product{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .ankor a{
+           float: left;
+           width: 200px;
+           padding-left: 200px;
+    }
+    .Become-an-Influencer{
+        flex-direction: column;
+    }
+    
 }
