--- a/style/style.css
+++ b/style/style.css
@@ -13,17 +13,17 @@ body{
     margin: 5px;
 
 }
-/* .navigation p{
-    
-    
-} */
-
+nav p{
+    font-size: 24px;
+    font-weight: bold;
+    max-width: 100%;
+}
 /* .........................................
      Journey as Influencer style start
 .............................................*/
 .Influencer{
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     padding-top: 100px;
 }
 .Influencer-info{
@@ -50,8 +50,8 @@ body{
 .button-icon{
     padding-left: 20px;
 }
-.Influencer-image:hover{
-    transform: scale(1.5);
+.button:hover{
+    transform: scale(1.3);
     transition: 0.5s ease-in-out;
 }
 /* .........................................
@@ -131,7 +131,8 @@ body{
  How to Become an Influencer section style start
  ...............................................*/
 .Become-an-Influencer{
-    display: flex; 
+    display: grid;
+    grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
     
@@ -139,15 +140,8 @@ body{
 .Influencer-stape{
     padding-right: 20px;
 }
-.Influencer-stape-image img{
-    width: 404px;
-    height: 270px;
-    border-radius: 10px;
-    margin-top: 20px;
- 
-}
 .Influencer-stape h1{
-    font-size: 38px;
+    font-size: 20px;
     
 }
 .Influencer-stape p{
@@ -171,53 +165,71 @@ body{
          footer section style start
 ............................................. */
 footer{
-    width: 1440px;
-    height: 210px;
+    width: 100vw;
+    height: auto;
     background: #0A0826;
     margin-top: 50px;
     line-height: 5px;
     padding-top: 50px;
     padding-bottom: 50px;
+    color: #FFFFFF;
     
 }
-footer h3{
-    color: #FFFFFF;
+.footer-contant{
     text-align: center;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 5px;
 }
-footer h6{
-    color: #FFFFFF;
+.social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 0.5px;
-   
 }
-.footer-icon{
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 20px;
-    letter-spacing: 5px;
+.social-icon{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
 }
-@media  only screen and (max-width:688px) {
-   
+.social-icon li{
+    margin: 0 10px;
+
+}
+@media only screen and (max-width:688px){
+    nav p{
+        white-space: nowrap;
+    }
     .Influencer{
-        flex-direction: column;
-        justify-content: center;  
+        grid-template-columns: repeat(1,1fr);
+        
+    }
+    .propular-product, .Become-an-Influencer{
+        grid-template-columns: repeat(1,1fr);
+    }
+  
+    .footer { 
+        position: static;
+     }
+     	  
+}
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .Influencer-info P{
+        width: 100vw;
+    }
+    .Influencer-image img{
+        position: sticky;
+    }
+    .Influencer{
+        grid-template-columns: repeat(1,1fr);
         
     }
     .propular-product{
-        grid-template-columns: repeat(1,1fr);
-    }
-    .ankor a{
-           float: left;
-           width: 200px;
-           padding-left: 200px;
+        grid-template-columns: repeat(2,1fr);
     }
     .Become-an-Influencer{
-        flex-direction: column;
+        grid-template-columns: repeat(1,1fr);
     }
     
+
 }
