--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ body{
 nav p{
     font-size: 24px;
     font-weight: bold;
-    max-width: 100%;
+    
 }
 /* .........................................
      Journey as Influencer style start
@@ -24,11 +24,14 @@ nav p{
 .Influencer{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    padding-top: 100px;
+    grid-column-gap: 100px;
+   
+    
 }
 .Influencer-info{
     width: 582px;
     height: 133px;
+    
 }
 .Influencer-image{
     width: 440px;
@@ -202,34 +205,52 @@ footer{
     }
     .Influencer{
         grid-template-columns: repeat(1,1fr);
-        
+        grid-column-gap: 100px;
     }
-    .propular-product, .Become-an-Influencer{
+    .Influencer-info{
+        width: 300px;
+        height: 200px;
+        margin: 120px 0;
+    }
+    .button:hover{
+        transform: scale(1.3);
+        transition: 0.5s ease-in-out;
+    }
+    .propular-product{
         grid-template-columns: repeat(1,1fr);
     }
-  
-    .footer { 
-        position: static;
-     }
-     	  
+    .ankor{
+        float: left;
+        width: 200px;
+        padding-right: 100px;
+    }
+    .Become-an-Influencer{
+        grid-template-columns: repeat(1,1fr);
+        width: 300px;
+        height: 250px;
+    }
 }
 @media only screen and (min-width:688px) and (max-width:992px) {
-    .Influencer-info P{
-        width: 100vw;
+    nav p{
+        white-space: nowrap;
     }
-    .Influencer-image img{
-        position: sticky;
-    }
+   
     .Influencer{
         grid-template-columns: repeat(1,1fr);
         
     }
+    .Influencer-info{
+        width: 300px;
+        height: 200px;
+        margin: 120px 0;
+    }
     .propular-product{
         grid-template-columns: repeat(2,1fr);
+        
     }
     .Become-an-Influencer{
         grid-template-columns: repeat(1,1fr);
     }
-    
+   
 
 }
