--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,8 @@ nav p{
     width: 329px;
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;height: 476px;
+    border-radius: 5px;
+    height: 476px;
     padding-top: 17px;
     padding-left: 20px;
     
