--- a/style/style.css
+++ b/style/style.css
@@ -200,6 +200,9 @@ footer{
     margin: 0 10px;
 
 }
+/* ..............................
+     Media quary for mobile
+................................. */
 @media only screen and (max-width:688px){
     nav p{
         white-space: nowrap;
@@ -231,6 +234,9 @@ footer{
         height: 250px;
     }
 }
+/* ..............................
+     Media quary for Tablet
+................................. */
 @media only screen and (min-width:688px) and (max-width:992px) {
     nav p{
         white-space: nowrap;
